--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Privacy Policy - Low Brightness</title>
+  <title>Privacy Policy - Super Dark</title>
   <style>
     body {
       font-family: system-ui, sans-serif;
@@ -43,7 +43,7 @@
     <h2>1. No Data Collection</h2>
     <p>
       We do not collect, store, or share any personal or non-personal data. 
-      Low Brightness operates completely offline.
+      Super Dark operates completely offline.
     </p>
   </div>
 
@@ -84,7 +84,7 @@
     <h2>6. Contact</h2>
     <p>
       If you have questions, please contact us at: <br>
-      📧 <a href="mailto:support@nouvous.com">support@nouvous.com</a>
+      📧 <a href="mailto:md.sharik5012@gmail.com">md.sharik5012@gmail.com</a>
     </p>
   </div>
 
